--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
+    "feather-icons": "^4.28.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-navigation-stack": "^2.10.4"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.6.5",
+    "react-navigation-stack": "^2.10.4",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
