--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -30,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:1059530663618:ios:6d788bef8c378bc0023d5b</string>
+	<key>DATABASE_URL</key>
+	<string>https://reactnativefirebase-5987a-default-rtdb.asia-southeast1.firebasedatabase.app</string>
 </dict>
 </plist>
